Agregado el background al lienzo de canvas

--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <canvas id="myCanvas" width="480" height="320"></canvas>
     <audio id="sound" volume="1.0"></audio>
     <audio id="music" volume="0.5" src="sfx/soundtrack.mp3"></audio>
-    <script src="js/level 1.js"></script>
+    <script src="js/animation.js"></script>
 </body>
 </html>
